--- a/systemtest/approvals/TestTransactionDroppedSpansStatsMetrics.approved.json
+++ b/systemtest/approvals/TestTransactionDroppedSpansStatsMetrics.approved.json
@@ -6,7 +6,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.internal",
+                "dataset": "apm.service_destination.10m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -19,6 +19,7 @@
                 "outcome": "success"
             },
             "metricset": {
+                "interval": "10m",
                 "name": "service_destination"
             },
             "observer": {
@@ -53,7 +54,7 @@
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.internal",
+                "dataset": "apm.service_destination.1m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -66,6 +67,199 @@
                 "outcome": "success"
             },
             "metricset": {
+                "interval": "1m",
+                "name": "service_destination"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "span": {
+                "destination": {
+                    "service": {
+                        "resource": "elasticsearch",
+                        "response_time": {
+                            "count": 4,
+                            "sum": {
+                                "us": 3600
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        {
+            "@timestamp": "dynamic",
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service_destination.60m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "outcome": "success"
+            },
+            "metricset": {
+                "interval": "60m",
+                "name": "service_destination"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "span": {
+                "destination": {
+                    "service": {
+                        "resource": "elasticsearch",
+                        "response_time": {
+                            "count": 4,
+                            "sum": {
+                                "us": 3600
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        {
+            "@timestamp": "dynamic",
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service_destination.10m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "outcome": "success"
+            },
+            "metricset": {
+                "interval": "10m",
+                "name": "service_destination"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "span": {
+                "destination": {
+                    "service": {
+                        "resource": "redis",
+                        "response_time": {
+                            "count": 50,
+                            "sum": {
+                                "us": 5000
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        {
+            "@timestamp": "dynamic",
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service_destination.1m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "outcome": "success"
+            },
+            "metricset": {
+                "interval": "1m",
+                "name": "service_destination"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "span": {
+                "destination": {
+                    "service": {
+                        "resource": "redis",
+                        "response_time": {
+                            "count": 50,
+                            "sum": {
+                                "us": 5000
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        {
+            "@timestamp": "dynamic",
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service_destination.60m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "outcome": "success"
+            },
+            "metricset": {
+                "interval": "60m",
                 "name": "service_destination"
             },
             "observer": {
