--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,3 +48,14 @@ jobs:
           go-version-file: go.mod
           cache: true
       - run: go test -v ./...
+
+  system-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: systemtest/go.mod
+          cache: true
+      - run: docker-compose up -d
+      - run: make system-test
