correct xml path
Signed-off-by: Marc Lopez Rubio <marc5.12@outlook.com>

--- a/.github/workflows/test-reporter.yml
+++ b/.github/workflows/test-reporter.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           artifact: test-results            # artifact name
           name: System Tests                # Name of the check run which will be created
-          path: "build/*.xml"               # Path to test results (inside artifact .zip)
+          path: "*.xml"               # Path to test results (inside artifact .zip)
           reporter: java-junit              # Format of test results
