--- a/systemtest/approvals/TestServiceDestinationAggregation.approved.json
+++ b/systemtest/approvals/TestServiceDestinationAggregation.approved.json
@@ -2,6 +2,7 @@
     "events": [
         {
             "@timestamp": "2006-01-02T15:04:05.000Z",
+            "_doc_count": 5,
             "agent": {
                 "name": "go"
             },
