--- a/systemtest/approvals/TestTransactionDroppedSpansStatsMetrics.approved.json
+++ b/systemtest/approvals/TestTransactionDroppedSpansStatsMetrics.approved.json
@@ -2,6 +2,7 @@
     "events": [
         {
             "@timestamp": "dynamic",
+            "_doc_count": 4,
             "agent": {
                 "name": "go"
             },
@@ -49,6 +50,7 @@
         },
         {
             "@timestamp": "dynamic",
+            "_doc_count": 50,
             "agent": {
                 "name": "go"
             },
