--- a/.github/workflows/test-reporter.yml
+++ b/.github/workflows/test-reporter.yml
@@ -1,12 +1,9 @@
----
 ## Workflow to process the JUnit test results and add a report to the checks.
-name: Test Report
+name: report-systemtest
 on:
   workflow_run:
-    workflows:
-      - ci
-    types:
-      - completed
+    workflows: [ ci ]
+    types: [ completed ]
 
 jobs:
   report:
@@ -16,5 +13,5 @@ jobs:
         with:
           artifact: test-results            # artifact name
           name: System Tests                # Name of the check run which will be created
-          path: "*.xml"               # Path to test results (inside artifact .zip)
+          path: "*.xml"                     # Path to test results (inside artifact .zip)
           reporter: java-junit              # Format of test results
