refactor: update labels in benchmark terraform script
Use the module/tags module for concistency across resources.
Set created_date label.
Fix coalesce being unused.

--- a/testing/benchmark/terraform.tfvars.example
+++ b/testing/benchmark/terraform.tfvars.example
@@ -1,4 +1,6 @@
 user_name = "USER"
+ENVIRONMENT = "dev"
+REPO = "apm-server"
 
 # The ESS region where the deployment will be provisioned. See the full list
 # in https://www.elastic.co/guide/en/cloud/current/ec-reference-regions.html.
