--- a/systemtest/approvals/TestServiceMetricsAggregation.approved.json
+++ b/systemtest/approvals/TestServiceMetricsAggregation.approved.json
@@ -1,13 +1,13 @@
 {
     "events": [
         {
-            "@timestamp": "2006-01-02T15:04:05.000Z",
+            "@timestamp": "2006-01-02T15:00:00.000Z",
             "_doc_count": 2,
             "agent": {
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.internal",
+                "dataset": "apm.service.10m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -23,6 +23,7 @@
                 }
             },
             "metricset": {
+                "interval": "10m",
                 "name": "service"
             },
             "observer": {
@@ -56,13 +57,13 @@
             }
         },
         {
-            "@timestamp": "2006-01-02T15:04:05.000Z",
+            "@timestamp": "2006-01-02T15:04:00.000Z",
             "_doc_count": 2,
             "agent": {
                 "name": "go"
             },
             "data_stream": {
-                "dataset": "apm.internal",
+                "dataset": "apm.service.1m",
                 "namespace": "default",
                 "type": "metrics"
             },
@@ -78,6 +79,231 @@
                 }
             },
             "metricset": {
+                "interval": "1m",
+                "name": "service"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "transaction": {
+                "duration": {
+                    "histogram": {
+                        "counts": [
+                            2
+                        ],
+                        "values": [
+                            1000003
+                        ]
+                    },
+                    "summary": {
+                        "sum": 2000000,
+                        "value_count": 2
+                    }
+                },
+                "type": "type1"
+            }
+        },
+        {
+            "@timestamp": "2006-01-02T15:00:00.000Z",
+            "_doc_count": 2,
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service.60m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "success_count": {
+                    "sum": 2,
+                    "value_count": 2
+                }
+            },
+            "metricset": {
+                "interval": "60m",
+                "name": "service"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "transaction": {
+                "duration": {
+                    "histogram": {
+                        "counts": [
+                            2
+                        ],
+                        "values": [
+                            1000003
+                        ]
+                    },
+                    "summary": {
+                        "sum": 2000000,
+                        "value_count": 2
+                    }
+                },
+                "type": "type1"
+            }
+        },
+        {
+            "@timestamp": "2006-01-02T15:00:00.000Z",
+            "_doc_count": 2,
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service.10m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "success_count": {
+                    "sum": 2,
+                    "value_count": 2
+                }
+            },
+            "metricset": {
+                "interval": "10m",
+                "name": "service"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "transaction": {
+                "duration": {
+                    "histogram": {
+                        "counts": [
+                            2
+                        ],
+                        "values": [
+                            1000003
+                        ]
+                    },
+                    "summary": {
+                        "sum": 2000000,
+                        "value_count": 2
+                    }
+                },
+                "type": "type2"
+            }
+        },
+        {
+            "@timestamp": "2006-01-02T15:04:00.000Z",
+            "_doc_count": 2,
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service.1m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "success_count": {
+                    "sum": 2,
+                    "value_count": 2
+                }
+            },
+            "metricset": {
+                "interval": "1m",
+                "name": "service"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "systemtest"
+            },
+            "transaction": {
+                "duration": {
+                    "histogram": {
+                        "counts": [
+                            2
+                        ],
+                        "values": [
+                            1000003
+                        ]
+                    },
+                    "summary": {
+                        "sum": 2000000,
+                        "value_count": 2
+                    }
+                },
+                "type": "type2"
+            }
+        },
+        {
+            "@timestamp": "2006-01-02T15:00:00.000Z",
+            "_doc_count": 2,
+            "agent": {
+                "name": "go"
+            },
+            "data_stream": {
+                "dataset": "apm.service.60m",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
+                "success_count": {
+                    "sum": 2,
+                    "value_count": 2
+                }
+            },
+            "metricset": {
+                "interval": "60m",
                 "name": "service"
             },
             "observer": {
