feat: remove default user_name value in make task
Similar to the terraform script, user_name is no longer populated
by the make task.

--- a/testing/benchmark/Makefile
+++ b/testing/benchmark/Makefile
@@ -54,7 +54,7 @@ init-aws-profile: ~/.aws/credentials
 	@touch $@
 
 terraform.tfvars:
-	@sed "s/USER/$(USER)/" $(TFVARS_SOURCE) > terraform.tfvars
+	@cp $(TFVARS_SOURCE) terraform.tfvars
 
 .PHONY: apmbench
 apmbench:
