--- a/apmpackage/apm/data_stream/service_destination_interval_metrics/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/service_destination_interval_metrics/elasticsearch/ingest_pipeline/default.yml
@@ -1,5 +1,5 @@
 ---
-description: Pipeline for ingesting APM transaction metrics.
+description: Pipeline for ingesting APM service destination metrics.
 processors:
   - pipeline:
       name: observer_version
