Add `transaction.duration.summary` to transaction metrics

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -30,6 +30,9 @@
     - description: Add transaction and service overflow metrics
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/9856
+    - description: Map `transaction.duration.summary` to aggregate_metric_double for transaction metrics
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/9973
 - version: "8.6.0"
   changes:
     - description: Change `ecs.version` to a `constant_keyword` field
