--- a/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
+++ b/apmpackage/apm/data_stream/transaction_interval_metrics/manifest.yml
@@ -12,11 +12,19 @@ elasticsearch:
       # use synthetic source to reduce storage size.
       _source:
         mode: synthetic
-      # We map event.success_count here because aggregate_metric_double
-      # is not currently supported by package-spec.
+      # We map transaction.duration.summary and event.success_count here
+      # because aggregate_metric_double is not currently supported by package-spec.
       #
       # See https://github.com/elastic/package-spec/issues/363
       properties:
+        transaction:
+          properties:
+            duration:
+              properties:
+                summary:
+                  type: aggregate_metric_double
+                  metrics: [sum, value_count]
+                  default_metric: sum
         event:
           properties:
             success_count:
